--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,17 @@ a.active {
   padding-bottom: 20px;
   gap: 20px;
 }
+.jobs {
+  padding: 40px 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+.jobs a {
+  flex: 1;
+  text-decoration: none;
+  padding: 10px;
+  background: #efefef;
+  color: #000;
+}
