--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,22 @@ a.active {
   background: #efefef;
   color: #000;
 }
+
+.job-details {
+  padding: 50px 0;
+}
+
+.job-details p {
+  max-width: 800px;
+  padding: 10px 0;
+}
+.job-details button {
+  background: darkgoldenrod;
+  color: #fff;
+  border: 0;
+  outline: 0;
+  padding: 8px 10px;
+  border-radius: 15px;
+  margin-top: 10px;
+  cursor: pointer;
+}
